FIX | GUI - Word wrap message detail

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -371,6 +371,7 @@ textarea {
   margin-left: 12.5%;
   top: 7em;
   padding-bottom: 1em;
+  word-wrap: break-word;
 
 
   .textarea {
